# pyview-cookiecutter-uv

./: cookiecutter.json  readme.md
{{cookiecutter.project_slug}}/: Dockerfile  justfile  pyproject.toml  readme.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/views/count/: count.css  count.html  count.py
