[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
readme = "readme.md"
requires-python = ">=3.11,<3.15"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

dependencies = [
    "pyview-web>=0.8.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
]

[tool.uv]
package = false
